[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wifi-passview"
version = "0.1.0"
description = "Cross-platform CLI to dump saved WiFi credentials from Linux, Windows, and macOS"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ExploitCraft", email = "exploitcraft@users.noreply.github.com" }]
keywords = ["wifi", "password", "credentials", "security", "network", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
wifi-passview = "wifi_passview.cli:main"

[project.urls]
Homepage = "https://github.com/ExploitCraft/wifi-passview"
Repository = "https://github.com/ExploitCraft/wifi-passview"
"Bug Tracker" = "https://github.com/ExploitCraft/wifi-passview/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
